--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -17,8 +17,8 @@ layout: default
     </div>
 </header>
 
-<link rel="stylesheet" href="/css/backtop.css">  <!-- Back Top -->
-<script type="text/javascript" src="/js/backtop.js"></script>  <!-- Back Top -->
+<link rel="stylesheet" href="{{site.baseurl}}/css/backtop.css">  <!-- Back Top -->
+<script type="text/javascript" src="{{site.baseurl}}/js/backtop.js"></script>  <!-- Back Top -->
 
 <div id="back-top">
   <a href="#top" title="回到顶部"></a>
