--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,8 @@
 <!-- Footer -->
 <footer>
-    <div class="container">
+    <div class="">
         <div class="row">
-            <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+            <div class="">
                 <ul class="list-inline text-center">
                     <!-- kill the Facebook and Weibo -->
                     <!--
@@ -105,12 +105,12 @@
 <!-- Custom Theme JavaScript -->
 <script src="{{ "/js/clean-blog.min.js " | prepend: site.baseurl }}"></script>
 
+<script src="http://cdn.bootcss.com/highlight.js/8.6/highlight.min.js"></script>
 
+<script type="text/javascript" src="{{site.baseurl}}/js/backtop.js"></script>  <!-- Back Top -->
 
 <!-- Highlight.js -->
 <script>
-    async("http://cdn.bootcss.com/highlight.js/8.6/highlight.min.js",function(){
         hljs.initHighlightingOnLoad();
-    })
 </script>
-<link href="http://cdn.bootcss.com/highlight.js/8.6/styles/github.min.css" rel="stylesheet">
+
