--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -9,7 +9,8 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="{{ site.baseurl }}/">{{ site.title }}</a>
+            <!--<a class="navbar-brand" href="{{ site.baseurl }}/">{{ site.title }}</a>-->
+            <i class="fa fa-home" aria-hidden="true"></i>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
