--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,10 @@
     {% include nav.html %}
 
     {{ content }}
-
+    <!-- UY BEGIN -->
+    <div id="uyan_frame"></div>
+    <script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js"></script>
+    <!-- UY END -->
     {% include footer.html %}
     <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
