--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -118,3 +118,7 @@ layout: default
         }
     }
 </style>
+<!-- UY BEGIN -->
+<div id="uyan_frame"></div>
+<script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js"></script>
+<!-- UY END -->
