convert less to sass

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -10,7 +10,7 @@
                 <span class="icon-bar"></span>
             </button>
             <!--<a class="navbar-brand" href="{{ site.baseurl }}/">{{ site.title }}</a>-->
-            <i class="fa fa-home" aria-hidden="true"></i>
+            <a class="navbar-brand" href="{{ site.baseurl }}/"><i class="fa fa-home" aria-hidden="true"></i></a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
