--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,6 +9,10 @@
 
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 
+    <!--Keywords-->
+    <meta name="keywords"
+          content="史湘阳, ThoughtWorks, 思特沃克, 博客, {{ page.title }},{{ page.brief }},{{ page.category }},测试,QA, shixiangyang,Shi Xiangyang,七姑娘, 七姑娘日记,七姑娘手记,july, July, julysxy, julyshi，项目实施DevOps时，我们是如何做测试的, {{ site.title }},{{ site.description }},{{ page.content | strip_html | strip_newlines | truncate: 50 }}">
+
     <!-- Icons -->
   <link rel="shortcut icon" href="{{site.baseurl}}/img/favicon.ico">
 
