--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -5,3 +5,4 @@ $gray-dark: lighten(black, 25%);
 $gray: lighten(black, 50%);
 $white-faded: fade(white, 80%);
 $gray-light: #eee;
+$font-color-primary: #616161;
