--- a/_sass/_clean-blog.scss
+++ b/_sass/_clean-blog.scss
@@ -2,8 +2,8 @@
 // Global Components
 body {
     @include serif;
-    font-size: 20px;
-    color: $gray-dark;
+    font-size: 16px;
+    color: $font-color-primary;
     overflow-x: hidden;
 }
 
@@ -49,7 +49,7 @@ blockquote {
 hr.small {
     max-width: 100px;
     margin: 15px auto;
-    border-width: 4px;
+    border-width: 2px;
     border-color: white;
 }
 
@@ -174,7 +174,7 @@ hr.small {
             font-size: 50px;
         }
         .subheading {
-            font-size: 24px;
+            font-size: 20px;
             line-height: 1.1;
             display: block;
             @include sans-serif;
@@ -236,6 +236,12 @@ hr.small {
             margin-top: 30px;
             margin-bottom: 10px;
         }
+        >.post-content-preview {
+            font-size: 16px;
+            margin-top: 30px;
+            margin-bottom: 10px;
+            color: $font-color-primary;
+        }
         >.post-subtitle {
             margin: 0;
             font-weight: 300;
@@ -244,9 +250,10 @@ hr.small {
     }
     >.post-meta {
         color: $gray;
-        font-size: 18px;
+        font-size: 14px;
         font-style: italic;
         margin-top: 0;
+        text-align: right;
         >a {
             text-decoration: none;
             color: $gray-dark;
