--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -118,7 +118,19 @@ layout: default
         }
     }
 </style>
-<!-- UY BEGIN -->
-<div id="uyan_frame"></div>
-<script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js"></script>
-<!-- UY END -->
+<!--&lt;!&ndash; UY BEGIN &ndash;&gt;-->
+<!--<div id="uyan_frame"></div>-->
+<!--<script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js"></script>-->
+<!--&lt;!&ndash; UY END &ndash;&gt;-->
+
+                <!--畅言-->
+                <!--PC和WAP自适应版-->
+                <div id="SOHUCS" sid="请将此处替换为配置SourceID的语句" ></div>
+                <script type="text/javascript">
+                    (function(){
+                        var appid = 'cytpJfGRl';
+                        var conf = 'prod_6551dc60b06138320da672b5d2776236';
+                        var width = window.innerWidth || document.documentElement.clientWidth;
+                        if (width < 960) {
+                            window.document.write('<script id="changyan_mobile_js" charset="utf-8" type="text/javascript" src="https://changyan.sohu.com/upload/mobile/wap-js/changyan_mobile.js?client_id=' + appid + '&conf=' + conf + '"><\/script>'); } else { var loadJs=function(d,a){var c=document.getElementsByTagName("head")[0]||document.head||document.documentElement;var b=document.createElement("script");b.setAttribute("type","text/javascript");b.setAttribute("charset","UTF-8");b.setAttribute("src",d);if(typeof a==="function"){if(window.attachEvent){b.onreadystatechange=function(){var e=b.readyState;if(e==="loaded"||e==="complete"){b.onreadystatechange=null;a()}}}else{b.onload=a}}c.appendChild(b)};loadJs("https://changyan.sohu.com/upload/changyan.js",function(){window.changyan.api.config({appid:appid,conf:conf})}); } })(); </script>
+                </script>
