--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -109,17 +109,17 @@
 
 <script type="text/javascript" src="{{site.baseurl}}/js/backtop.js"></script>  <!-- Back Top -->
 
+<!--audio source-->
+<!-- <script type="text/javascript" src="{{site.baseurl}}/src/vender/audio.min.js"></script> -->
+
 <!-- Highlight.js -->
 <script>
         hljs.initHighlightingOnLoad();
+
+        // audiojs.events.ready(function () {
+        //     var as = audiojs.createAll();
+        // });
 </script>
 
-<!--audio source-->
-<script type="text/javascript" src="/src/vender/audio.min.js"></script>
 
-<script>
-    audiojs.events.ready(function() {
-        var as = audiojs.createAll();
-    });
-</script>
 
