update back to top behavior

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,12 @@
         ga('create', 'UA-80884545-1', 'auto');
         ga('send', 'pageview');
     </script>
-
+    <div id="back-top">
+        <a href="#top" title="回到顶部">
+            <div class="rope"></div>
+            <div class="baby"></div>
+        </a>
+    </div>
 </body>
 
 </html>
