update babaycry pic

--- a/_sass/_clean-blog.scss
+++ b/_sass/_clean-blog.scss
@@ -608,7 +608,7 @@ body {
         }
 
         .baby {
-            background-image: url('../img/babycry.jpg');
+            background-image: url('../img/babycry.gif');
             background-repeat: round;
             width: 75px;
             height: 80px;
