--- a/_sass/_clean-blog.scss
+++ b/_sass/_clean-blog.scss
@@ -23,11 +23,28 @@ h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
 
 h1 {
     font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-size: 28px;
 }
 
-h4 {
-    font-size: 18px;
-}
+//h2 {
+//    font-size: 25px;
+//}
+//
+//h3 {
+//    color: #843534;
+//}
+//
+//h4 {
+//    font-size: 18px;
+//}
+//
+//h5 {
+//    font-size: 16px;
+//}
+//
+//h6 {
+//    font-size: 14px;
+//}
 
 a {
     color: #2b79c3;
@@ -608,7 +625,7 @@ body {
         }
 
         .baby {
-            background-image: url('../img/babycry.gif');
+            background-image: url('../img/babycry.png');
             background-repeat: round;
             width: 75px;
             height: 80px;
@@ -628,3 +645,119 @@ body {
     margin-top: -10px;
 }
 
+/*
+* Code Style
+* ========================================================================== */
+pre {
+    line-height: 1.5;
+    border: 1px solid #ddd;
+    padding: 1em;
+    background: #F9F8F6;
+    margin: 2em 0;
+    code {
+        background-color: transparent;
+        overflow: auto;
+        white-space: pre-wrap;
+        line-height: 2em;
+
+        font-size: inherit;
+    }
+}
+
+code,
+pre {
+    font-family: "Menlo", 'Andale Mono', 'Consolas', monospace;
+    font-size: .9em;
+    line-height: 1.3;
+    -webkit-font-smoothing: auto;
+}
+
+/*
+* Table
+* ========================================================================== */
+table {
+    width: 100%;
+    max-width: 100%;
+    border-collapse: collapse;
+    margin: 2% 0;
+    overflow-x: auto;
+    display: block;
+    margin: 0 auto;
+}
+
+table tr:nth-child(even) {
+    background: #f9f9f9;
+}
+
+table th {
+    background: #f5f5f5;
+    font-family: sans-serif;
+}
+
+th,
+td {
+    text-align: left;
+    padding: .313em .625em;
+    //border: 1px solid #efefef;
+    min-width: 50px;
+}
+
+table caption {
+    padding: .3em;
+    border: 1px solid #ddd;
+}
+
+/*
+* JavaScript Classes
+* ========================================================================== */
+#shadow {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, .7);
+    display: none;
+    z-index: 1000;
+}
+
+#switcher {
+    width: 10%;
+    cursor: crosshair;
+    height: 100vh;
+    position: absolute;
+    right: 0;
+    top: 0;
+    z-index: 400;
+    display: none;
+}
+
+.transition-divs {
+    transition: all .5s ease-in-out 0s;
+}
+
+.aside-left {
+    left: -33% !important;
+}
+
+.centering {
+    margin-left: calc(50% - (740px / 2)) !important;
+    transition: all .5s ease-in-out 0s;
+}
+
+.hide {
+    display: none !important;
+}
+
+.img-popup {
+    width: auto;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    margin: auto;
+    z-index: 2000;
+    box-shadow: 0 0 10px #000;
+}
+
+a img {
+    cursor: -webkit-zoom-in;
+    cursor: zoom-in;
+}
