Update Post folder

--- a/_sass/_clean-blog.scss
+++ b/_sass/_clean-blog.scss
@@ -382,7 +382,7 @@ hr.small {
 .post-content-preview {
     font-size: 13px;
     font-style: normal;
-    color: #5894b0; //#a3a3a3;
+    color: #616161; //#a3a3a3;
     &:hover {
         color: #46A5ED;
     }
