add header bubbles , minor style change

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -109,6 +109,8 @@
 
 <script type="text/javascript" src="{{site.baseurl}}/js/backtop.js"></script>  <!-- Back Top -->
 
+<script type="text/javascript" src="{{site.baseurl}}/js/custom.js"></script>
+<!-- Back Top -->
 <!--audio source-->
 <!-- <script type="text/javascript" src="{{site.baseurl}}/src/vender/audio.min.js"></script> -->
 
