--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -11,10 +11,12 @@ layout: default
                     <h1>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</h1>
                     <hr class="small">
                     <span class="subheading">{{ page.description }}</span>
+                    
                 </div>
             </div>
         </div>
     </div>
+    <div class="bubbles"></div>
 </header>
 
 <!-- Main Content -->
