--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -10,8 +10,25 @@ layout: default
                 <div class="site-heading">
                     <h1>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</h1>
                     <hr class="small">
-                    <span class="subheading">{{ page.description }}</span>
-                    
+                    <!-- <span class="subheading">{{ page.description }}</span> -->
+                    <ul class="ch-grid">
+                      <li>
+                        <div class="ch-item">
+                          <div class="ch-info-wrap">
+                            <div class="ch-info">
+                              <div class="ch-info-front ch-img-1"></div>
+                              <div class="ch-info-back">
+                                <h3>{{ page.description }}</h3>
+                                <p>
+                                  <br>
+                                  <a href="https://linkedin.com/in/{{site.linkedin_username}}">View on LinkedIn</a>
+                                </p>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </li>
+                    </ul>
                 </div>
             </div>
         </div>
