--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,11 +19,28 @@
         ga('create', 'UA-80884545-1', 'auto');
         ga('send', 'pageview');
     </script>
-    <div id="back-top">
+    <!-- <div id="back-top">
         <a href="#top" title="回到顶部">
             <div class="rope"></div>
             <div class="baby"></div>
         </a>
+    </div> -->
+    <div class="utilitytools">
+      <a  id="back-top" class="" title="回到顶部"><i class="fa fa-angle-up" aria-hidden="true"></i></a>
+      <a class="qrcode" href="javascript:void(0)" title="关注微信">
+        <i class="fa fa-qrcode" aria-hidden="true"></i>
+        <span class="tooltip-content">
+          <span class="tooltip-text">
+            <span class="tooltip-inner">关注微信!
+              <br>
+              <img src="{{site.baseurl }}/img/July-Wechat.jpg">
+            </span>
+          </span>
+        </span>
+      </a>
+      <a class="" href="mailto://mailto:julyfly321520@163.com" title="发邮件给我">
+        <i class="fa fa-envelope-o" aria-hidden="true"></i>
+      </a>
     </div>
 </body>
 
