--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -8,8 +8,8 @@ layout: default
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                 <div class="site-heading">
-                    <h1>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</h1>
-                    <hr class="small">
+                    <!-- <h1>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</h1> -->
+                    <!-- <hr class="small"> -->
                     <!-- <span class="subheading">{{ page.description }}</span> -->
                     <ul class="ch-grid">
                       <li>
@@ -18,7 +18,7 @@ layout: default
                             <div class="ch-info">
                               <div class="ch-info-front ch-img-1"></div>
                               <div class="ch-info-back">
-                                <h3>{{ page.description }}</h3>
+                                <h3>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</h3>
                                 <p>
                                   <br>
                                   <a href="https://linkedin.com/in/{{site.linkedin_username}}">View on LinkedIn</a>
