--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
             <div class="">
                 <ul class="list-inline text-center">
                     <!-- kill the Facebook and Weibo -->
-                    <!--
+                    
                     <li>
                         <a href="{{ "/feed.xml" | prepend: site.baseurl }}">
                             <span class="fa-stack fa-lg">
@@ -24,8 +24,8 @@
                         </a>
                     </li>
                     {% endif %}
-                    -->
-                    <!--
+                   
+                    
                     {% if site.github_username %}
                     <li>
                         <a href="https://github.com/{{ site.github_username }}">
@@ -36,8 +36,8 @@
                         </a>
                     </li>
                     {% endif %}
-                    -->
-                    <!--
+                   
+                    
                     {% if site.douban_username %}
                     <li>
                         <a href="http://www.douban.com/people/{{ site.douban_username }}">
@@ -48,9 +48,9 @@
                         </a>
                     </li>
                     {% endif %}
-                    -->
+                   
 
-                    <!--
+                    
                     {% if site.facebook_username %}
                     <li>
                         <a href="https://www.facebook.com/{{ site.facebook_username }}">
@@ -61,8 +61,8 @@
                         </a>
                     </li>
                     {% endif %}
-                    -->
-                    <!--
+                   
+                    
                     {% if site.zhihu_username %}
                     <li>
                         <a target="_blank" href="https://www.zhihu.com/people/{{ site.zhihu_username }}">
@@ -73,8 +73,8 @@
                         </a>
                     </li>
                     {% endif %}
-                    -->
-                    <!--
+                   
+                    
                     {% if site.weibo_username %}
                     <li>
                         <a target="_blank" href="http://weibo.com/{{ site.weibo_username }}">
@@ -85,7 +85,17 @@
                         </a>
                     </li>
                     {% endif %}
-                    -->
+
+                   {% if site.tw_username %}
+                  <li>
+                    <a target="_blank" href="http://insights.thoughtworks.cn/author/{{ site.tw_username }}">
+                      <span class="fa-stack fa-lg">
+                        <i class="fa fa-circle fa-stack-2x"></i>
+                        <i class="fa  fa-stack-1x fa-inverse">TW</i>
+                      </span>
+                    </a>
+                  </li>
+                  {% endif %}
 
                 </ul>
                 <p class="copyright text-muted">
@@ -96,31 +106,14 @@
     </div>
 </footer>
 
-<!-- jQuery -->
-<script src="{{ "/js/jquery.min.js " | prepend: site.baseurl }}"></script>
-
-<!-- Bootstrap Core JavaScript -->
-<script src="{{ "/js/bootstrap.min.js " | prepend: site.baseurl }}"></script>
-
-<!-- Custom Theme JavaScript -->
-<script src="{{ "/js/clean-blog.min.js " | prepend: site.baseurl }}"></script>
-
 <script src="http://cdn.bootcss.com/highlight.js/8.6/highlight.min.js"></script>
+<!-- vendor JavaScript -->
+<script src="{{ " /js/dist/vendor.min.js " | prepend: site.baseurl }}"></script>
+<!-- Custom JavaScript -->
+<script src="{{ "/js/dist/all.min.js " | prepend: site.baseurl }}"></script>
 
-<script type="text/javascript" src="{{site.baseurl}}/js/backtop.js"></script>  <!-- Back Top -->
-
-<script type="text/javascript" src="{{site.baseurl}}/js/custom.js"></script>
-<!-- Back Top -->
-<!--audio source-->
-<!-- <script type="text/javascript" src="{{site.baseurl}}/src/vender/audio.min.js"></script> -->
-
-<!-- Highlight.js -->
 <script>
         hljs.initHighlightingOnLoad();
-
-        // audiojs.events.ready(function () {
-        //     var as = audiojs.createAll();
-        // });
 </script>
 
 
