--- a/_sass/_clean-blog.scss
+++ b/_sass/_clean-blog.scss
@@ -899,7 +899,7 @@ a img {
 }
 
 .ch-img-1 {
-  background-image: url('../img/favicon.png');
+  background-image: url('../img/july1.jpg');
   background-repeat: no-repeat;
 }
 
