--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,9 +4,9 @@
 {% include head.html %}
 
 <body ontouchstart="">
-
+    {% include search.html %}
     {% include nav.html %}
-
+    
     {{ content }}
     
     {% include footer.html %}
@@ -42,6 +42,7 @@
         <i class="fa fa-envelope-o" aria-hidden="true"></i>
       </a>
     </div>
+
 </body>
 
 </html>
