--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -96,7 +96,16 @@
                     </a>
                   </li>
                   {% endif %}
-
+                   {% if site.linkedin_username %}
+                  <li>
+                    <a target="_blank" href="https://linkedin.com/in/{{ site.linkedin_username }}">
+                      <span class="fa-stack fa-lg">
+                        <i class="fa fa-circle fa-stack-2x"></i>
+                        <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
+                      </span>
+                    </a>
+                  </li>
+                  {% endif %}
                 </ul>
                 <p class="copyright text-muted">
                 &copy; {{ site.time | date: '%Y' }} {{ site.owner.name }} ❖ All rights reserved.
@@ -112,9 +121,6 @@
 <!-- Custom JavaScript -->
 <script src="{{ "/js/dist/all.min.js " | prepend: site.baseurl }}"></script>
 
-<script>
-        hljs.initHighlightingOnLoad();
-</script>
 
 
 
