--- a/_sass/_clean-blog.scss
+++ b/_sass/_clean-blog.scss
@@ -913,6 +913,8 @@ a img {
   height: 80px;
   font-family: 'Open Sans', Arial, sans-serif;
   text-shadow: 0 0 1px #fff, 0 1px 2px rgba(0, 0, 0, 0.3);
+  //custom style
+  transform: translateY(50%);
 }
 
 .ch-info p {
@@ -961,7 +963,7 @@ a img {
 
 .utilitytools {
   position: fixed;
-  bottom: 60px;
+  bottom: 100px;
   right: 30px;
   width: 40px;
   a {
@@ -975,6 +977,8 @@ a img {
     border-top: 1px solid #eee;
     border-right: 1px solid #eee;
     border-left: 1px solid #eee;
+    background: #6fa9d0;
+    color: #fff;
 
     &:last-child {
       border-bottom: 1px solid #eee;
@@ -985,8 +989,7 @@ a img {
     }
 
     &:hover {
-      background: #2b79c3;
-      color: #fff;
+      background: rgba(111, 169, 208,0.5);
     }
   }
 
@@ -995,13 +998,10 @@ a img {
     &:hover {
       .tooltip-content {
         opacity: 1;
-        pointer-events: auto;
         width: 220px;
-        transition: width 0.5s;
       }
       .tooltip-text {
         opacity: 1;
-        transition-delay: 0.5s;
       }
     }
   }
@@ -1044,4 +1044,95 @@ a img {
       border-width: 10px;
       margin-left: -10px;
     }
+}
+
+.search {
+    position: fixed;
+    z-index: -1;
+    top: 0;
+    right: calc(8em + 1px);
+    overflow: hidden;
+    width: calc(30em - 1px);
+    height: 100vh;
+    &::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: #fff;
+      transform: scale3d(0, 1, 1);
+      transform-origin: 0% 50%;
+      transition: transform 0.3s;
+      transition-timing-function: cubic-bezier(0.86, 0, 0.07, 1);
+    }
+  &.search--open {
+    pointer-events: auto;
+    z-index: 1000;
+    &::before {
+      transform: scale3d(1, 1, 1);
+    }
+    .search-inner {
+      transform: translate3d(0, 0, 0);
+      transition-delay: 0.15s;
+      transition-timing-function: cubic-bezier(0.86, 0, 0.07, 1);
+    }
+  }
+  .search-inner {
+    position: relative;
+    padding: 2.5em 1.5em 0;
+    transform: translate3d(-100%, 0, 0);
+    transition: transform 0.3s;
+  }
+  .search-input {
+    border: 0;
+    background: transparent;
+    border-radius: 0;
+    -webkit-appearance: none;
+    font-family: inherit;
+    font-size: 2.5em;
+    line-height: 1;
+    display: inline-block;
+    box-sizing: border-box;
+    width: 100%;
+    padding: 0.15em 0;
+    color: #000;
+    border-bottom: 2px solid;
+    outline: none;
+  }
+  .search-info {
+    font-size: 85%;
+    font-weight: bold;
+    display: block;
+    padding: 0.5em 0;
+    color: #000;
+  }
+
+  #results-container {
+    list-style-type: none;
+    padding-left: 0;
+
+    >li {
+      font-size: 16px;
+      margin: 5px 0;
+    }
+
+    .fa-link {
+      margin-right: 10px;
+    }
+  }
+}
+.overlay {
+  position: fixed;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  background: rgba(171, 171, 171, 0.5);
+  z-index: 900;
+  display: none;
+}
+.navbar-nav .fa-search {
+  font-size: 18px;
 }
