add comment system and highligh js

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -118,6 +118,7 @@
 <script src="http://cdn.bootcss.com/highlight.js/8.6/highlight.min.js"></script>
 <!-- vendor JavaScript -->
 <script src="{{ " /js/dist/vendor.min.js " | prepend: site.baseurl }}"></script>
+<script src="{{ " /js/vendor/highlight.pack.js " | prepend: site.baseurl }}"></script>
 <!-- Custom JavaScript -->
 <script src="{{ "/js/dist/all.min.js " | prepend: site.baseurl }}"></script>
 
