--- a/_includes/head.html
+++ b/_includes/head.html
@@ -28,6 +28,7 @@
     <link rel="stylesheet" href="{{ "/css/syntax.css" | prepend: site.baseurl }}">
 
     <link href="http://cdn.bootcss.com/highlight.js/8.6/styles/github.min.css" rel="stylesheet">
+    <link href="{{ '/css/agate.css' | prepend: site.baseurl }}" rel="stylesheet" type="text/css">
 
     <!-- <link rel="stylesheet" href="{{site.baseurl}}/css/backtop.css">  Back Top -->
     <!-- Custom Fonts -->
