update homepage style

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,18 +27,18 @@
     </div> -->
     <div class="utilitytools">
       <a  id="back-top" class="" title="回到顶部"><i class="fa fa-angle-up" aria-hidden="true"></i></a>
-      <a class="qrcode" href="javascript:void(0)" title="关注微信">
+      <a class="qrcode" href="javascript:void(0)" title="关注我">
         <i class="fa fa-qrcode" aria-hidden="true"></i>
         <span class="tooltip-content">
           <span class="tooltip-text">
-            <span class="tooltip-inner">关注微信!
+            <span class="tooltip-inner">扫这里，关注七姑娘微信
               <br>
               <img src="{{site.baseurl }}/img/July-Wechat.jpg">
             </span>
           </span>
         </span>
       </a>
-      <a class="" href="mailto://mailto:julyfly321520@163.com" title="发邮件给我">
+      <a class="mail" href="mailto://mailto:julyfly321520@163.com" title="联系我">
         <i class="fa fa-envelope-o" aria-hidden="true"></i>
       </a>
     </div>
