--- a/_sass/_clean-blog.scss
+++ b/_sass/_clean-blog.scss
@@ -907,12 +907,12 @@ a img {
   color: #000;
   text-transform: uppercase;
   letter-spacing: 2px;
-  font-size: 18px;
+  font-size: 19px;
   margin: 0 15px;
   padding: 40px 0 0 0;
   height: 80px;
   font-family: 'Open Sans', Arial, sans-serif;
-  text-shadow: 0 0 1px #fff, 0 1px 2px rgba(0, 0, 0, 0.3);
+  //text-shadow: 0 0 1px #fff, 0 1px 2px rgba(0, 0, 0, 0.3);
   //custom style
   transform: translateY(50%);
 }
