--- a/_sass/_clean-blog.scss
+++ b/_sass/_clean-blog.scss
@@ -675,6 +675,8 @@ pre {
     font-size: .9em;
     line-height: 1.3;
     -webkit-font-smoothing: auto;
+    background-color: #f0f0f0;
+    color: #404040;
 }
 
 /*
@@ -687,15 +689,15 @@ table {
     margin: 2% 0;
     overflow-x: auto;
     display: block;
-    margin: 0 auto;
+    margin: 0 auto
 }
 
 table tr:nth-child(even) {
-    background: #f9f9f9;
+    background: #f1f1f1;
 }
 
 table th {
-    background: #f5f5f5;
+    background: #b4c6d0;
     font-family: sans-serif;
 }
 
@@ -703,13 +705,12 @@ th,
 td {
     text-align: left;
     padding: .313em .625em;
-    //border: 1px solid #efefef;
+    border: 1px solid #efefef;
     min-width: 50px;
 }
 
 table caption {
     padding: .3em;
-    border: 1px solid #ddd;
 }
 
 /*
