--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,7 +38,7 @@
           </span>
         </span>
       </a>
-      <a class="mail" href="mailto://mailto:julyfly321520@163.com" title="联系我">
+      <a class="mail" href="mailto:julyfly321520@163.com" title="联系我">
         <i class="fa fa-envelope-o" aria-hidden="true"></i>
       </a>
     </div>
